re PR c++/8660 (template overloading ICE in tsubst_expr, at cp/pt.c:7644)

PR c++/8660
        * decl2.c (check_classfn): A member template only matches a
        member template.

From-SVN: r64166